sumo/tests/duarouter/trips/errors/vehicle_false_departpos/errors.duarouter
Error: Invalid departPos definition for vehicle ''
Quitting (on error).
